# CASE-Application-Navigator

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
case_viewer/: .gitignore  README.md  _qt_example.py  _qt_example_01.py  _qt_example_02.py  _qt_example_layouts.py  _qt_layout_color_widget.py  case_viewer.py  lib.py
examples/: Makefile  WirelessNetworkConnection.json
